<resources>
    <string name="app_name">FlexChoice</string>
    <string name="login">FLEXCHOICE</string>
    <string name="emailid"> Enter your email id </string>
    <string name="pwd"> Enter your password </string>
    <string name="signup"> Not Registered yet? Create a new account! </string>
    <string name="blogin"> LOGIN </string>

    <!--Registeration-->

    <string name="reg"> Registration </string>
    <string name="name"> Name </string>
    <string name="email"> Email id </string>
    <string name="ph">Phone Number</string>
    <string name="rpwd"> Confirm password </string>
    <string name="breg">Register</string>
    <string name="ppwd"> password </string>
    <string name="tlogin"> Already have an account? click here to login! </string>


    <!--<&#45;&#45;&#45;&#45;Splash Screen -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&ndash;&gt;-->

    <string name="title_activity_welcome">Home Screen</string>

    <string name="next"> Next </string>
    <string name="skip">SKIP</string>

    <string name="start">GOT IT</string>

    <!--DrawerLayout-->
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_api">AIzaSyASLHQuGVTEjPWlOBluV6RMqxykFDLBkEs</string>

    <!-- Database nodes -->
    <string name="node_users">users</string>
    <string name="node_posts">posts</string>

    <!-- Intent extras and Bundle arguments -->
    <string name="arg_post_id">arg_post_id</string>

</resources>
