<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/reg"
        android:textColor="@color/colorBaseText"
        android:textSize="20sp"
        android:fontFamily="@font/permanent_marker"/>

    <EditText
        android:id="@+id/edeid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="98dp"
        android:autofillHints=""
        android:background="#ffff"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edpaswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reg"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-50dp"
        android:layout_marginBottom="326dp"
        android:autofillHints=""
        android:background="#fff"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edrpaswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="262dp"
        android:autofillHints=""
        android:background="#ffff"
        android:ems="10"
        android:hint="@string/rpwd"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnreg"
        android:layout_width="245dp"
        android:layout_height="wrap_content"


        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="154dp"
        android:background="#4d5258"

        android:text="@string/breg"
        android:textColor="@color/colorBaseText" />

    <TextView
        android:id="@+id/tlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="86dp"
        android:text="@string/tlogin"

        android:textColor="@color/colorBaseText"/>


</RelativeLayout>