<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="86dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/login"
        android:textColor="@color/foreground_material_light"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edemail"
        android:layout_width="287dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:autofillHints=""
        android:background="#ffff"
        android:ems="10"
        android:hint="@string/emailid"
        android:inputType="textEmailAddress"
        android:textColor="#000"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edpwd"
        android:layout_width="287dp"
        android:layout_height="45dp"
        android:layout_below="@+id/edemail"
        android:layout_alignStart="@+id/edemail"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="263dp"
        android:autofillHints=""
        android:background="#ffff"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:textColor="@color/gen_black"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/signup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="96dp"
        android:text="@string/signup"
        android:textColor="@color/foreground_material_light" />


    <TextView
        android:id="@+id/admin"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="60dp"
        android:text="Login as Admin"
        android:textColor="@color/foreground_material_light" />

    <Button
        android:id="@+id/blogin"
        android:layout_width="287dp"
        android:layout_height="37dp"
        android:layout_alignStart="@+id/edpwd"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="178dp"
        android:background="#e7e7e7"
        android:text="@string/blogin"
        android:textColor="@color/foreground_material_light" />


</RelativeLayout>